--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
               <artifactId>h2</artifactId>
               <version>1.4.195</version>
             </dependency>
+            <dependency>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>1.16.16</version>
+              <scope>provided</scope>
+            </dependency>
           </dependencies>
         </plugin>
         <plugin>
