--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,20 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <jakartaee.api.version>8.0.0</jakartaee.api.version>
+    <deltaspike.version>1.7.2</deltaspike.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.deltaspike.distribution</groupId>
+        <artifactId>distributions-bom</artifactId>
+        <version>${deltaspike.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
@@ -48,6 +61,17 @@
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-cdi</artifactId>
       <version>1.1.1</version>
+    </dependency>
+    <!-- DeltaSpike CORE -->
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-api</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-impl</artifactId>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 
